<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sbag.whatsmynextarticle.app.MainActivity">

    <!-- dummy usage...used for topic generation...also part of the JM article -->
    <!--<Button
        android:id="@+id/but_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Topics"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:onClick="createTopics"
        />-->

    <RelativeLayout
        android:id="@+id/rl_linkbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/iv_twitter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter_selector"
            style="@style/activity_main_style_link_bar_item"
            android:clickable="true"
            android:onClick="onSelectTwitterButton"
            />
        <ImageView
            android:id="@+id/iv_facebook"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook_selector"
            style="@style/activity_main_style_link_bar_item"
            android:layout_toRightOf="@id/iv_twitter"
            android:clickable="true"
            android:onClick="onSelectFacebookButton"
            />
        <ImageView
            android:id="@+id/iv_googleplus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/googleplus_selector"
            style="@style/activity_main_style_link_bar_item"
            android:layout_toRightOf="@id/iv_facebook"
            android:clickable="true"
            android:onClick="onSelectGooglePlusButton"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:src="@drawable/jax_selector"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:onClick="onSelectJaxEnter"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_authorContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_linkbar"
        style="@style/activity_main_style_author_bar_container"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.sbag.whatsmynextarticle.app.components.RoundedImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profil"/>
        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/activity_main_style_author_bar_text"
            android:text="@string/text_topic"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttonContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_below="@+id/ll_authorContainer"
        android:layout_marginBottom="60dp"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/but_topic1"
            style="@style/activity_main_style_topic_button"
            android:text="@string/topic1"
            android:onClick="selectTopic"
            android:drawableLeft="@drawable/spring_60"
            />
        <Button
            android:id="@+id/but_topic2"
            style="@style/activity_main_style_topic_button"
            android:text="@string/topic2"
            android:onClick="selectTopic"
            android:layout_below="@id/but_topic1"
            android:drawableLeft="@drawable/uipatterns_60"
            />
        <Button
            android:id="@+id/but_topic3"
            style="@style/activity_main_style_topic_button"
            android:text="@string/topic3"
            android:onClick="selectTopic"
            android:layout_below="@id/but_topic2"
            android:drawableLeft="@drawable/fragments_60"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_votingResult"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@+id/ll_authorContainer"
        android:layout_marginBottom="60dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:id="@+id/ll_reference"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/spring_60"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topic1_percentage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@color/brown"
                android:layout_weight=".0"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topic1_counterpercentage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="#3000aeef"
                android:layout_weight=".0"/>
            <TextView
                android:id="@+id/tv_topic1Percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activity_main_style_percentage_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/uipatterns_60"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topic2_percentage"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:background="@color/brown"
                android:layout_weight=".0"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topic2_counterpercentage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="#3000aeef"
                android:layout_weight=".0"/>
            <TextView
                android:id="@+id/tv_topic2Percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activity_main_style_percentage_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/fragments_60"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topic3_percentage"
                android:layout_width="0dip"
                android:layout_height="40dp"
                android:background="@color/brown"
                android:layout_weight=".0"/>
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/topic3_counterpercentage"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="#3000aeef"
                android:layout_weight=".0"/>
            <TextView
                android:id="@+id/tv_topic3Percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/activity_main_style_percentage_text"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/but_vote"
        style="@style/activity_main_style_vote_button"
        android:text="@string/send"
        android:onClick="vote"
        />
    <Button
        android:visibility="gone"
        android:id="@+id/but_follow"
        style="@style/activity_main_style_vote_button"
        android:text="@string/follow"
        android:onClick="onSelectTwitterButton"
        />

    <TextView
        android:id="@+id/tv_message"
        android:layout_above="@+id/but_vote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/activity_main_style_message_box_text"
        android:visibility="gone"
        android:gravity="center_horizontal"
        />

</RelativeLayout>
